# guestbook-rust

./: Cargo.toml  Dockerfile  GEMINI.md  README.md  docker-compose.yml
.github/workflows/: build-and-push.yml
src/: main.rs
templates/: index.html
